# orbital-watch

./: .gitignore  LICENSE  README.md  achievements.json  categories.json  digest.md  instruments.json  names.json  pyproject.toml  requirements.txt  state.json  watchlist.json
.github/workflows/: discover-candidates.yml  orbital-watch.yml  research-probe.yml  verify-gibs-layers.yml
docs/: app.js  index.html  style.css
scripts/: research_probe.py
src/orbital_watch/: alert.py  baseline.py  biography.py  biography_cli.py  cli.py  crew.py  deep_space.py  digest.py  discover.py  discover_cli.py  firms.py  history.py  history_cli.py  propagate.py  ratelimit.py  reentry.py  reentry_cli.py  satcat.py  satnogs.py  site_data.py  site_data_cli.py  site_history_cli.py  socrates.py  store.py  tle_client.py  verify_imagery.py  verify_imagery_cli.py  volcano.py
tests/: test_baseline.py  test_biography.py  test_biography_cli.py  test_cli_celestrak_fallback.py  test_cli_digest_integration.py  test_cli_exclusion.py  test_cli_integration.py  test_crew.py  test_deep_space.py  test_digest.py  test_discover.py  test_discover_cli.py  test_firms.py  test_history.py  test_history_cli.py  test_propagate.py  test_ratelimit.py  test_reentry.py  test_reentry_cli.py  test_satcat.py  test_satnogs.py  test_site_data.py  test_site_data_cli.py  test_site_history_cli.py  test_socrates.py  test_spacetrack_ratelimit.py  test_tle_client.py  test_verify_imagery.py  test_volcano.py
